[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-process"
version = "0.1.4"
description = "A tool for merging images with CLI and TUI support"
readme = "README.md"
authors = [
  {name = "Jese Ki", email = "2094901072@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Pillow",
    "typer",
    "textual"
]

[project.scripts]
image-process = "image_process.cli:app"
image-process-tui = "image_process.cli:tui"
image-process-cli = "image_process.cli:cli"

[project.optional-dependencies]
dev = [
    "ruff",
    "uv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["image_process*"]

[tool.ruff]
line-length = 88
target-version = "py38"